--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "vue-excel-parse-for-annie",
+  "homepage": "/vue-excel-parse-for-annie",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -22,6 +25,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^3.2.3",
     "jest": "^27.3.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
